Enhance game description and add footer with creators
Updated game description and rules for clarity and engagement. Added creator names in the footer.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <!-- Game Description & Rules -->
   <section class="card">
     <h2>Description</h2>
-    <p>Arcade-style fun with a starry vibe. Challenge friends by competing to aim for 21!</p>
+    <p>Arcade-style fun with a starry vibe. Challenge friends by competing to get as close to 21 as possible without going over.</p>
     <h2>How to Play</h2>
     <ul>
-      <li><strong>Deal / Pass / Stand</strong> — choose your action each turn</li>
-      <li><strong>Restart</strong> — start a new game anytime</li>
-      <li>Highest ≤ 21 wins</li>
+      <li><strong> Deal / Pass / Stand to control your turn. </strong></li>
+        <li><strong> Hit Restart anytime to start a new round!</strong></li>
+      <li><strong>21 and below wins.</strong> </li>
       <li>Glowing buttons guide the current player</li>
     </ul>
   </section>
@@ -47,12 +47,12 @@
 <div id="game-screen" style="display:none;">
   <h1 class="title">Mario’s Space Deck — Play 21!</h1>
 
-  <!-- Music Toggle -->
+  
  
+<!-- Characters images next to their names -->
 
   <section class="card center">
-    <p id="message"> Press Deal to start!</p>
-
+    <p id="message">🎮 Press Deal to start!</p>
    <div id="players">
   <div class="player" id="player1">
     <h2 class="player-title">
@@ -81,14 +81,17 @@
     <p>Total: <span class="total">0</span></p>
   </div>
 
-  <div class="player" id="dealer">
-    <h2 class="player-title">
-      <img src="https://i.postimg.cc/BbBgDrtr/peach-dealer.png" alt="Dealer" class="spin-char">
-      Dealer
-    </h2>
-    <div class="cards"></div>
-    <p>Total: <span class="total">0</span></p>
-  </div>
+<div class="player" id="dealer">
+  <h2 class="player-title">
+    <img src="https://i.postimg.cc/BbBgDrtr/peach-dealer.png" 
+         alt="Dealer Peach" 
+         class="spin-char">
+    Dealer
+  </h2>
+  <div class="cards"></div>
+  <p>Total: <span class="total">0</span></p>
+</div>
+
 </div>
 
 
@@ -102,7 +105,7 @@
   </section>
 
   <section class="card">
-    <h2> Game Rules</h2>
+    <h2>🎯 Game Rules</h2>
     <ul>
       <li>Try to reach <strong>21</strong> without going over.</li>
       <li>Players take turns to deal, pass, or stand.</li>
@@ -111,6 +114,11 @@
     </ul>
   </section>
 </div>
+
+<!----Project creater names ------>
+
+<footer>
+    <p> Created by: Niles Brantley, Alex Quiroz,Micah Scott,Shomarr Warner, Kadish James</p>
 
 <!-- Background Music -->
 <audio id="bgm" preload="auto" loop>
