--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
       <!-- Mario -->
       <div class="player" id="player1">
         <h2 class="player-title">
-          <img src="assets/mario.png" alt="Mario" class="spin-char">
+          <!-- Corrected Filename + Folder -->
+          <img src="Assets/pngimg.com - mario_PNG125 (1).png" alt="Mario" class="spin-char">
           Mario
         </h2>
         <div class="cards"></div>
@@ -66,7 +67,7 @@
       <!-- Luigi -->
       <div class="player" id="player2">
         <h2 class="player-title">
-          <img src="assets/luigi.png" alt="Luigi" class="spin-char">
+          <img src="Assets/luigi.png" alt="Luigi" class="spin-char">
           Luigi
         </h2>
         <div class="cards"></div>
@@ -76,7 +77,7 @@
       <!-- Yoshi -->
       <div class="player" id="player3">
         <h2 class="player-title">
-          <img src="assets/yoshi.png" alt="Yoshi" class="spin-char">
+          <img src="Assets/yoshi.png" alt="Yoshi" class="spin-char">
           Yoshi
         </h2>
         <div class="cards"></div>
@@ -86,7 +87,8 @@
       <!-- Dealer (Peach-Inspired Dealer) -->
       <div class="player" id="dealer">
         <h2 class="player-title">
-          <img src="assets/dealer-peach.png" alt="Dealer Peach" class="spin-char">
+          <!-- Corrected: peach-dealer.png -->
+          <img src="Assets/peach-dealer.png" alt="Dealer Peach" class="spin-char">
           Dealer
         </h2>
         <div class="cards"></div>
@@ -122,7 +124,8 @@
 
 <!-- ===== Background Music ===== -->
 <audio id="bgm" preload="auto" loop>
-  <source src="assets/mario-theme.mp3" type="audio/mpeg">
+  <!-- Corrected filename + folder -->
+  <source src="Assets/Mario-theme-song.mp3" type="audio/mpeg">
 </audio>
 
 <!-- ===== JavaScript ===== -->
