Update Mario image source to correct file

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="player" id="player1">
         <h2 class="player-title">
           <!-- Corrected Filename + Folder -->
-          <img src="Assets/pngimg.com - mario_PNG125 (1).png" alt="Mario" class="spin-char">
+          <img src="Assets/mario.png" alt="Mario" class="spin-char">
           Mario
         </h2>
         <div class="cards"></div>
