Add stylesheet link to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <link href="https://fonts.cdnfonts.com/css/super-mario-256" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
+
 
 <!-- ===== HOME SCREEN ===== -->
 <div id="home-screen">
