Add project description to footer
Added a description of the project in the footer.

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 <!-- ===== Credits ===== -->
 <footer>
   <p>Created by: Niles Brantley, Alex Quiroz, Micah Scott, Shomarr Warner, Kadish James</p>
+  <p> Mario’s Space Deck was developed as a fun creative project and as part of our Web Fundamentals coursework.</p>
 </footer>
 
 <!-- ===== Background Music ===== -->
