Update audio preload setting in index.html
Changed audio preload attribute from 'auto' to 'none'.

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 </footer>
 
 <!-- ===== Background Music ===== -->
-<audio id="bgm" preload="auto" loop>
-  <!-- Corrected filename + folder -->
+<audio id="bgm" preload="none" loop>
+  <!-- Game sound link -->
   <source src="Assets/Mario-theme-song.mp3" type="audio/mpeg">
 </audio>
 
