Add Content Security Policy and viewport meta tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+
+    <!-- SAFETY + TRUST HEADERS -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:; style-src 'self' https: 'unsafe-inline'; script-src 'self' https:;">
+    <meta name="referrer" content="strict-origin">
+
+    <!-- MOBILE FRIENDLY VIEWPORT -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+ <!-- FONT -->
 <link href="https://fonts.cdnfonts.com/css/super-mario-256" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+  
+ <!-- CSS FILE -->
+  <link rel="stylesheet" href="style.css">
+</head>
 
 
 <!-- ===== HOME SCREEN ===== -->
