Add logo image to home and game screens

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 <!----- HOME SCREEN AREA ------>
 <div id="home-screen">
+<img src="Assets/Logo.PNG" alt="Mario's Space Deck Logo" class="game-logo">
 <h1 class="title">Mario’s Space Deck</h1>
 
 <section class="card center">
@@ -93,6 +94,7 @@
 
 <!------- GAME SCREEN ------->
 <div id="game-screen" style="display:none;">
+<img src="Assets/Logo.PNG" class="game-logo">
 <h1 class="title">Mario’s Space Deck — Play 21!</h1>
 
 <section class="card center">
